--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -3,7 +3,7 @@
     "Audience": "mustafa.com",
     "Issuer": "mustafapaydas.com",
     "AccessTokenExpiration": 10,
-    "SecurityKey": "seninagzindancikanlakulagininduydugununtutmadýgýnýnfarkindamisinacabaalgidamisecicisinsen"
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
 
   },
   "Logging": {
